2004-08-12  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-im-mode-map): for some reason,
	(read-kbd-macro "C-<return>")
	wasn't doing the right thing.  "\C-\r" seems to work.

2004-07-19  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-reformat-text): make the tnt-strip-a-href call after
	we've done the tnt-strip-some-html calls instead of before.  this
	fixes some cases where a URL would show up twice.

2004-04-06  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-backslashify-string): also put a '\' before '+'.

2004-02-13  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-completion-func): wasn't working before.  not sure
	when it ever worked...  changed it to use string-match instead of
	re-search-forward.
	(tnt-completing-read-list): don't insert a space after each comma,
	since when the user types names separated by commas, they're
	unable to include such spaces.

2004-01-02  NeilFred Picciotto  <fred@full.halflab.com>

	* tnt.el (tnt-get-buddy-at-point): avoid using point-at-eol, since
	it's apparently not available on FSF emacs...

2003-12-30  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-strip-offline-nicks): also don't strip if "just-onoff".

2003-11-11  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-nick-less-than): Make buddylist grouping case-insensitive.
	(tnt-downcase): Add.

2003-11-04  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-default-away-message): Change default to nil
	to preserve old behavior.
	(tnt-append-message): Set buffer-undo-list to nil at end.

2003-11-02  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-get-buddy-at-point): Use point-at-eol instead of
	line-end-position.
	(tnt-strip-offline-nicks): Don't strip buddies with pending
	messages or pounces.

2003-10-29  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-show-buddies): call (font-lock-mode 1).  not sure if
	this is the right place for this.